Bug 1107889 - On Windows, detect when unable to play H.264/AAC (for example due to lacking service pack on Vista). r=kinetik,r=dmajor a=mse